# MLOPS_E2E

./: .gitignore  Dockerfile  Fast_API_Service.py  README.md  data.dvc  models.dvc  pyproject.toml  streamlitapp.py
.dvc/: config
.github/workflows/: test_app.yaml  test_docker.yaml
config/: main.yaml  pre-processing.yaml
mlruns/0/: meta.yaml
mlruns/421620380481640792/: meta.yaml
mlruns/421620380481640792/14b40588ee34412b8090d8b2ad0d0bb6/: meta.yaml
mlruns/421620380481640792/14b40588ee34412b8090d8b2ad0d0bb6/artifacts/model/: MLmodel  conda.yaml  model.pkl
mlruns/421620380481640792/14b40588ee34412b8090d8b2ad0d0bb6/metrics/: accuracy  f1_scoree  precision  recall
mlruns/421620380481640792/14b40588ee34412b8090d8b2ad0d0bb6/tags/: mlflow.log-model.history
mlruns/421620380481640792/54b20f38787a485ca4b8d433d363b94a/: meta.yaml
mlruns/421620380481640792/54b20f38787a485ca4b8d433d363b94a/artifacts/model/: MLmodel  python_env.yaml
mlruns/421620380481640792/54b20f38787a485ca4b8d433d363b94a/metrics/: accuracy  f1_scoree  precision  recall
mlruns/421620380481640792/54b20f38787a485ca4b8d433d363b94a/tags/: mlflow.log-model.history  mlflow.source.name
mlruns/421620380481640792/e15c0ee43e92427ea001e3320da9e53b/: meta.yaml
mlruns/421620380481640792/e15c0ee43e92427ea001e3320da9e53b/metrics/: accuracy  f1_scoree  precision  recall
mlruns/421620380481640792/e15c0ee43e92427ea001e3320da9e53b/tags/: mlflow.log-model.history  mlflow.source.git.commit
src/: data_pre_processing.py  eval_model.py  main.py  train_model.py
(+3 files in other folders)
